crates/lang/macro/tests/ui/fail/M-05-message-invalid-selector.stderr
error: invalid selector - a selector must consist of four bytes in hex (e.g. `selector = "0xCAFEBABE"`)
  --> $DIR/M-05-message-invalid-selector.rs:14:24
   |
14 |         #[ink(message, selector = "0x00")]
   |                        ^^^^^^^^^^^^^^^^^
